--- a/app/client/style.css
+++ b/app/client/style.css
@@ -10,7 +10,10 @@
 }
 
 .Pho{
-  background-image: "https://www.worldanvil.com/heroes/images/header-mage.jpg"/>
+  background-image: url('https://ju.se/images/18.31b7ae5314e53427efe2f175/1520578556837/Pre-departure.jpg') no-repeat center center fixed;
+  background-size: cover;
+  height: 500px;
+  color: white;
 }
 
 Footer {
